add firebase and fix layout

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -9,6 +9,6 @@
   /* font-family: Inter, sans-serif; */
 }
 
-/* .ps__rail-y {
-  opacity: 0.3 !important;
-} */
+a, button {
+  cursor: pointer;
+}
