--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,12 +1,38 @@
 :root {
     --background: #F5F4F6;
     --text: #333;
+    --bg-scroll: #e2e2e2;
+    --scroll-thumb: rgba(160, 160, 160, 0.4);
 }
 
 * {
     margin: 0;
     box-sizing: border-box;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+::-webkit-scrollbar {
+    width: 6px;
+    height: p6x;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    // background: #f1f1f1; 
+    background: transparent
+    // width: 22px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: var(--scroll-thumb);
+    border: 4px solid rgba(85, 85, 85, 0);
+    border-radius: 8px; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #999; 
 }
 
 a, button {
@@ -20,4 +46,8 @@ b, p, i, strong, span, button, input {
 body {
     background: var(--background);
     color: var(--text);
+}
+
+#app {
+    overflow: hidden;
 }
