fix bug, feature image fix, fix scale theme

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -13,12 +13,12 @@
 * {
     margin: 0;
     box-sizing: border-box;
-    font-family: Inter, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 ::-webkit-scrollbar {
     width: 6px;
-    height: p6x;
+    // height: p6x;
 }
 
 /* Track */
